[metadata]
name = steam-crawler
author = Tobias Gruetzmacher
author_email = tobias-git@23.gs
description = A simple steam metadata crawler & dumper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TobiX/steam-crawler
project_urls =
    Bug Tracker = https://github.com/TobiX/steam-crawler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT No Attribution License (MIT-0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires =
    rich==12.2.0
    steam[client]==1.2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    steam-crawler = steam_crawler.cli:run

[flake8]
ignore = E128
min-version = 3.8
